<resources>
    <string name="app_name">TimeApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Time Planner</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="title_activity_new_task">NewTaskActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_task">New Task</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task description</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="add_new_task">Add New Task</string>
    <string name="today">Today</string>
    <string name="routines">Routines</string>
    <string name="menu_gallery">placeholder</string>
    <string name="routine_name">Routine name</string>
    <string name="routine_new">Add new routine task</string>
    <string name="routine_edit">Save routine task</string>
    <string name="save">Save</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="repeat_period">Repeat period</string>
    <string name="calendar">Calendar</string>
    <string name="notification_time">Notification time</string>

    <string-array name="periods">
        <item>Daily</item>
        <item>Weekly</item>
        <item>2 weeks</item>
        <item>3 weeks</item>
        <item>4 weeks</item>
    </string-array>
    <string-array name="reminders">
        <item>On start of the task</item>
        <item>5 minutes before</item>
        <item>15 minutes before</item>
        <item>30 minutes before</item>
        <item>1 hour before</item>
    </string-array>

</resources>