<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_today">

    <fragment
        android:id="@+id/nav_today"
        android:name="com.example.timeapp.ui.today.TodayFragment"
        android:label="@string/today"
        tools:layout="@layout/fragment_today">
        <action
            android:id="@+id/action_nav_home_to_newTaskActivity"
            app:destination="@id/newTaskActivity"
            app:popUpTo="@id/nav_today" />
        <action
            android:id="@+id/action_nav_today_to_taskActivity"
            app:destination="@id/edit_task_activity"
            app:popUpTo="@id/nav_today" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.timeapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_routines"
        android:name="com.example.timeapp.ui.routines.RoutinesFragment"
        android:label="@string/routines"
        tools:layout="@layout/fragment_routines">
        <action
            android:id="@+id/action_nav_routines_to_new_edit_routine_activity"
            app:popUpTo="@id/nav_routines"
            app:destination="@id/new_edit_routine_activity" />
    </fragment>
    <activity
        android:id="@+id/newTaskActivity"
        android:name="com.example.timeapp.ui.today.NewTaskActivity"
        android:label="activity_new_task"
        tools:layout="@layout/activity_new_task" />
    <activity
        android:id="@+id/edit_task_activity"
        android:name="com.example.timeapp.ui.today.EditTaskActivity"
        android:label="edit_task_activity"
        tools:layout="@layout/activity_edit_task" />
    <activity
        android:id="@+id/new_edit_routine_activity"
        android:name="com.example.timeapp.ui.routines.NewEditRoutineActivity"
        android:label="new_edit_routine_activity"
        tools:layout="@layout/activity_new_edit_routine" />


</navigation>