<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:theme="@style/Floating"
    tools:context=".ui.today.EditTaskActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/task_name_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_name"
                    android:padding="12dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/task_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/task_description_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_description"
                    android:padding="12dp"
                    app:layout_constraintTop_toBottomOf="@id/task_name_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/task_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/task_date_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:padding="12dp"
                    app:layout_constraintEnd_toStartOf="@+id/task_time_layout"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintHorizontal_weight="5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/task_description_layout"
                    app:startIconDrawable="@drawable/ic_baseline_date_range_24">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/task_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:nextFocusRight="@+id/task_time" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/task_time_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/time"
                    android:padding="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="4"
                    app:layout_constraintStart_toEndOf="@+id/task_date_layout"
                    app:layout_constraintTop_toBottomOf="@+id/task_description_layout"
                    app:startIconDrawable="@drawable/ic_time_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/task_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/task_date_layout"
                    app:singleLine="true"
                    app:singleSelection="true">


                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_today"
                        style="@style/Widget.TimeApp.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/today"
                        android:textAlignment="center" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_tomorrow"
                        style="@style/Widget.TimeApp.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/tomorrow"
                        android:textAlignment="center" />
                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/chipGroup" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/repeated_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:paddingStart="17dp"
                    android:text="Is the task repeated?"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@id/divider0" />


                <androidx.constraintlayout.widget.Group
                    android:id="@+id/repeat_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="divider1,routine_repeat_layout,subheader,routines_horizontal_scroll_view,selectDayGroup" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/repeated_switch" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/routine_repeat_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repeat_period"
                    android:padding="12dp"
                    app:layout_constraintTop_toBottomOf="@id/divider1"
                    app:startIconDrawable="@drawable/ic_repeat">

                    <AutoCompleteTextView
                        android:id="@+id/routine_repeat"
                        style="drop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/selectDayGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="subheader,routines_horizontal_scroll_view" />

                <TextView
                    android:id="@+id/subheader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="6dp"
                    android:clickable="false"
                    android:text="Select day"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/routine_repeat_layout" />

                <HorizontalScrollView
                    android:id="@+id/routines_horizontal_scroll_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:scrollbars="none"
                    app:layout_constraintTop_toBottomOf="@id/subheader">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupNew"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.TimeApp.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Monday" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.TimeApp.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Tuesday" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.TimeApp.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Wednesday" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.TimeApp.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Thursday" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.TimeApp.Chip.Choice"
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:text="Friday" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.TimeApp.Chip.Choice"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Saturday" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.TimeApp.Chip.Choice"
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:text="Sunday" />

                    </com.google.android.material.chip.ChipGroup>

                </HorizontalScrollView>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/routines_horizontal_scroll_view" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/reminder_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:paddingStart="17dp"
                    android:text="Set reminder"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textSize="16dp"
                    app:layout_constraintTop_toBottomOf="@id/divider2" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/reminder_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="reminder_layout,divider3" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reminder_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notification_time"
                    android:padding="12dp"
                    app:layout_constraintTop_toBottomOf="@id/reminder_switch"
                    app:startIconDrawable="@drawable/ic_baseline_notifications_24">

                    <AutoCompleteTextView
                        android:id="@+id/reminder"
                        style="drop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/reminder_layout" />


                <Button
                    android:id="@+id/save_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="65dp"
                    android:text="@string/add_new_task"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cornerRadius="15dp"
                    app:layout_constraintBottom_toTopOf="@id/cancel_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider3"
                    app:layout_constraintVertical_chainStyle="spread_inside" />

                <Button
                    android:id="@+id/cancel_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="35dp"
                    android:text="Cancel"
                    android:textAllCaps="false"
                    android:textSize="17sp"
                    app:cornerRadius="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/save_button" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>